# IntroKotlinNativeCpp

./: .gitignore  CMakeLists.txt
include/: libsample_api.h
source/: main.cpp
